- MFB (Which was an MFH) - Bug #44153 (ErrorCode returns NULL when no error) - Bug #44154 (ErrorInfo to ALWAYS have 3 elements)